--- a/Amber/Amber.vcxproj
+++ b/Amber/Amber.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="src\Amber\Core\MouseButtonCodes.h" />
     <ClInclude Include="src\Amber\Core\Timestep.h" />
     <ClInclude Include="src\Amber\Core\Window.h" />
+    <ClInclude Include="src\Amber\Debug\Instrumentor.h" />
     <ClInclude Include="src\Amber\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Amber\Events\Event.h" />
     <ClInclude Include="src\Amber\Events\KeyEvent.h" />
